fix navbar shift problems

--- a/app/static/app/css/index.css
+++ b/app/static/app/css/index.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 body {
     font-family: 'Ubuntu', sans-serif;
     font-size: 16px;
@@ -7,6 +11,7 @@ body {
     padding-top: 50px;
     padding-bottom: 40px;
 }
+
 
 a,
 a:hover,
